# job-scout

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fix_all_indentation.py  fix_indentation.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  test_scrapling_poc.py
.agents_tmp/: PLAN.md
.github/workflows/: ci.yml  local-ci.yml
Scrapling/: LICENSE.txt  SKILL.md
Scrapling/agent-skill/: README.md
Scrapling/examples/: 01_fetcher_session.py  02_dynamic_session.py  03_stealthy_session.py  04_spider.py  README.md
Scrapling/references/: mcp-server.md  migrating_from_beautifulsoup.md
Scrapling/references/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
Scrapling/references/parsing/: adaptive.md  main_classes.md  selection.md
Scrapling/references/spiders/: advanced.md  architecture.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
config/: config.yaml
docs/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PYTHON_STANDARDS.md  SCRAPLING_POC.md  TESTING_REPORT.md
firecrawl/: SKILL.md
output/: job_scout.db
scripts/: fix_all_indentation.py  fix_indentation.py  scrape.py  test_imports.py  test_job_matching_script.py  test_phase2_integration_script.py  test_scrapers_minimal_script.py  test_scrapers_standalone_script.py
src/: __init__.py  config_manager.py  logging_config.py  main.py
src/tailoring/: __init__.py  cv_tailor.py
src/tracking/: __init__.py  database.py  models.py  repository.py
src/utils/: config_manager.py  logging.py  registry.py  retry.py
tests/: conftest.py  test_indeed_scraper_integration.py  test_reed_scraper.py  test_reed_scraper_integration.py  test_scrapers.py  test_scrapers_integration.py  test_stackoverflow_scraper.py  test_stackoverflow_scraper_integration.py  test_totaljobs_scraper.py  test_totaljobs_scraper_integration.py
tests/integration/: test_imports.py  test_imports_integration.py  test_job_matching.py  test_phase2_integration.py  test_reed_scraper_live.py  test_scrapers_minimal.py  test_scrapers_standalone.py  test_scrapling_browser.py
tests/mocks/discovery/: __init__.py  job_matching.py
tests/mocks/hermes_agent/: __init__.py
tests/mocks/hermes_agent/gateway/: config.py
tests/unit/: test_base_scraper.py  test_cv_tailor.py  test_cvlibrary_scraper.py  test_indeed_scraper.py  test_job_matching.py  test_main.py  test_scrapers.py  test_stackoverflow_scraper.py
tests/unit/discovery/: test_job_matching.py
tests/unit/tests/: test_indeed_scraper.py  test_reed_scraper.py  test_scrapers.py  test_stackoverflow_scraper.py  test_totaljobs_scraper.py
tests/unit/tracking/: test_database.py  test_repository.py
tests/unit/utils/: test_logging_config.py
