[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscout"
version = "0.1.0"
description = "Autonomous job hunting tool for UK and worldwide remote positions"
authors = [{name = "Job Scout", email = "jobscout@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "beautifulsoup4>=4.0.0",
    "requests>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-dateutil>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]
lint = ["ruff>=0.1.0", "black>=23.0.0", "mypy>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "RSE", "PTH", "PYI", "RUF", "SLF"]
ignore = ["E402", "T201", "PTH", "UP", "I001", "SLF001", "RUF", "E501", "B007", "DTZ003", "DTZ005"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
